--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/roboto": "^5.1.0",
     "@headlessui/react": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.12.1",
@@ -18,6 +19,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "framer-motion": "^12.5.0",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
@@ -26,7 +28,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.0",
+    "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.0",
@@ -52,6 +54,7 @@
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.3"
+    "vite": "^6.2.2",
+    "vite-plugin-compression2": "^1.3.3"
   }
 }
