--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.39.0",
     "vite": "^6.2.2",
     "vite-plugin-compression2": "^1.3.3"
   }
